...
    WalkStart, WalkEnd, MeditationStart, MeditationEnd
}

internal const val SOUNDS_MAIN_SECTION_TAG = "SoundSettings.main"
internal const val SOUNDS_WALK_SECTION_TAG = "SoundSettings.walk"
internal const val SOUNDS_SEEK_SECTION_TAG = "SoundSettings.seek"
internal const val SOUNDS_SONAR_VOLUME_SLIDER_TAG = "SoundSettings.sonarVolume"
internal const val SOUNDS_MEDITATION_SECTION_TAG = "SoundSettings.meditation"
internal const val SOUNDS_VOLUME_SECTION_TAG = "SoundSettings.volume"
internal const val SOUNDS_STORAGE_SECTION_TAG = "SoundSettings.storage"
internal const val SOUNDS_DOWNLOAD_PROGRESS_TAG = "SoundSettings.downloadProgress"
internal const val SOUNDS_BELL_VOLUME_SLIDER_TAG = "SoundSettings.bellVolume"
internal const val SOUNDS_SOUNDSCAPE_VOLUME_SLIDER_TAG = "SoundSettings.soundscapeVolume"
internal const val SOUNDS_CLEAR_ALL_BUTTON_TAG = "SoundSettings.clearAll"

